--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Jennifer Eze
 logo: /assets/img/headshot_circle.png
 description: Data Analyst
 show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
